# predictive-kv-prefetch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  experiment_config.yaml  inference_baseline.py  kv_paging.py  main.py  metrics.py  predictive_prefetch.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
configs/: baseline_config.json  large_model_config.json  paged_kv_config.json  predictive_prefetch_config.json  small_model_config.json
notebooks/: baseline_analysis.ipynb
